# TemplatesAbuse

./: CMakeLists.txt  README.md
n-prime/: CMakeLists.txt
n-prime/src/: n-prime.hpp  print-n-prime.sh  print-n-prime.sh.in  print_n_prime.1.in  print_n_prime.2.in
